[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tile/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pawn/Pawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/Main.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 3 )
pawn_scene = ExtResource( 2 )

[node name="1-1" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 96 )
opposite_tile = "1-15"

[node name="1-2" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 96 )
opposite_tile = "1-21"
safe = false

[node name="1-3" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 96 )
opposite_tile = "1-20"
spawn = "Blue"

[node name="1-4" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 96 )
opposite_tile = "1-19"
spawn = "Blue"

[node name="1-5" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 96 )
opposite_tile = "1-18"
spawn = "Blue"

[node name="1-6" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 96 )
opposite_tile = "1-17"
spawn = "Blue"

[node name="1-7" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 96 )
opposite_tile = "1-16"
safe = false

[node name="1-8" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 96 )
opposite_tile = "1-22"

[node name="1-9" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 160 )
opposite_tile = "1-28"
safe = false

[node name="1-10" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 224 )
opposite_tile = "1-27"
spawn = "Red"

[node name="1-11" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 288 )
opposite_tile = "1-26"
spawn = "Red"

[node name="1-12" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 352 )
opposite_tile = "1-25"
spawn = "Red"

[node name="1-13" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 416 )
opposite_tile = "1-24"
spawn = "Red"

[node name="1-14" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 480 )
opposite_tile = "1-23"
safe = false

[node name="1-15" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 544 )

[node name="1-16" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 544 )
opposite_tile = "1-7"
safe = false

[node name="1-17" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 544 )
opposite_tile = "1-6"
spawn = "Yellow"

[node name="1-18" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 544 )
opposite_tile = "1-5"
spawn = "Yellow"

[node name="1-19" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 544 )
opposite_tile = "1-4"
spawn = "Yellow"

[node name="1-20" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 544 )
opposite_tile = "1-3"
spawn = "Yellow"

[node name="1-21" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 544 )
opposite_tile = "1-2"
safe = false

[node name="1-22" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 544 )
opposite_tile = "1-8"

[node name="1-23" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 480 )
opposite_tile = "1-14"
safe = false

[node name="1-24" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 416 )
opposite_tile = "1-13"
spawn = "Green"

[node name="1-25" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 352 )
opposite_tile = "1-12"
spawn = "Green"

[node name="1-26" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 288 )
opposite_tile = "1-11"
spawn = "Green"

[node name="1-27" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 224 )
opposite_tile = "1-10"
spawn = "Green"

[node name="1-28" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 160 )
opposite_tile = "1-9"
safe = false

[node name="2-1" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 160 )
opposite_tile = "2-11"

[node name="2-2" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 160 )
opposite_tile = "2-15"
spawn = "Blue"
safe = false

[node name="2-3" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 160 )
opposite_tile = "2-14"
spawn = "Blue"

[node name="2-4" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 160 )
opposite_tile = "2-13"
spawn = "Blue"

[node name="2-5" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 160 )
opposite_tile = "2-12"
spawn = "Blue"
safe = false

[node name="2-6" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 160 )
opposite_tile = "2-16"

[node name="2-7" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 224 )
opposite_tile = "2-20"
spawn = "Red"
safe = false

[node name="2-8" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 288 )
opposite_tile = "2-19"
spawn = "Red"

[node name="2-9" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 352 )
opposite_tile = "2-18"
spawn = "Red"

[node name="2-10" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 416 )
opposite_tile = "2-17"
spawn = "Red"
safe = false

[node name="2-11" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 480 )
opposite_tile = "2-1"

[node name="2-12" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 480 )
opposite_tile = "2-5"
spawn = "Yellow"
safe = false

[node name="2-13" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 480 )
opposite_tile = "2-4"
spawn = "Yellow"

[node name="2-14" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 480 )
opposite_tile = "2-3"
spawn = "Yellow"

[node name="2-15" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 480 )
opposite_tile = "2-2"
spawn = "Yellow"
safe = false

[node name="2-16" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 480 )
opposite_tile = "2-6"

[node name="2-17" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 416 )
opposite_tile = "2-10"
spawn = "Green"
safe = false

[node name="2-18" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 352 )
opposite_tile = "2-9"
spawn = "Green"

[node name="2-19" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 288 )
opposite_tile = "2-8"
spawn = "Green"

[node name="2-20" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 224 )
opposite_tile = "2-7"
spawn = "Green"
safe = false

[node name="3-1" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 224 )
opposite_tile = "3-7"
spawn = "Green-Blue"

[node name="3-2" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 224 )
opposite_tile = "3-9"
spawn = "Blue"
safe = false

[node name="3-3" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 224 )
opposite_tile = "3-8"
spawn = "Blue"
safe = false

[node name="3-4" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 224 )
opposite_tile = "3-10"
spawn = "Blue-Red"

[node name="3-5" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 288 )
opposite_tile = "3-12"
spawn = "Red"
safe = false

[node name="3-6" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 352 )
opposite_tile = "3-11"
spawn = "Red"
safe = false

[node name="3-7" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 416 )
opposite_tile = "3-1"
spawn = "Red-Yellow"

[node name="3-8" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 416 )
opposite_tile = "3-3"
spawn = "Yellow"
safe = false

[node name="3-9" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 416 )
opposite_tile = "3-2"
spawn = "Yellow"
safe = false

[node name="3-10" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 416 )
opposite_tile = "3-4"
spawn = "Yellow-Green"

[node name="3-11" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 352 )
opposite_tile = "3-6"
spawn = "Green"
safe = false

[node name="3-12" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 288 )
opposite_tile = "3-5"
spawn = "Green"
safe = false

[node name="4-1" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 288 )
opposite_tile = "4-3"
spawn = "everything"

[node name="4-2" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 288 )
opposite_tile = "4-4"
spawn = "everything"

[node name="4-3" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 352 )
opposite_tile = "4-1"
spawn = "everything"

[node name="4-4" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 352 )
opposite_tile = "4-2"
spawn = "everything"

[node name="Blue1" parent="." instance=ExtResource( 2 )]
position = Vector2( 352, 96 )
color = "Blue"

[node name="Blue2" parent="." instance=ExtResource( 2 )]
position = Vector2( 416, 96 )
color = "Blue"

[node name="Blue3" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 96 )
color = "Blue"

[node name="Blue4" parent="." instance=ExtResource( 2 )]
position = Vector2( 544, 96 )
color = "Blue"

[node name="Red1" parent="." instance=ExtResource( 2 )]
position = Vector2( 672, 224 )
color = "Red"

[node name="Red2" parent="." instance=ExtResource( 2 )]
position = Vector2( 672, 288 )
color = "Red"

[node name="Red3" parent="." instance=ExtResource( 2 )]
position = Vector2( 672, 352 )
color = "Red"

[node name="Red4" parent="." instance=ExtResource( 2 )]
position = Vector2( 672, 416 )
color = "Red"

[node name="Yellow1" parent="." instance=ExtResource( 2 )]
position = Vector2( 544, 544 )
color = "Yellow"

[node name="Yellow2" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 544 )
color = "Yellow"

[node name="Yellow3" parent="." instance=ExtResource( 2 )]
position = Vector2( 416, 544 )
color = "Yellow"

[node name="Yellow4" parent="." instance=ExtResource( 2 )]
position = Vector2( 352, 544 )
color = "Yellow"

[node name="Green1" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 416 )
color = "Green"

[node name="Green2" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 352 )
color = "Green"

[node name="Green3" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 288 )
color = "Green"

[node name="Green4" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 224 )
color = "Green"

[node name="RollButton" type="Button" parent="."]
margin_left = 768.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 128.0
text = "Click to Roll"

[node name="FlipButton" type="Button" parent="."]
margin_left = 768.0
margin_top = 192.0
margin_right = 896.0
margin_bottom = 256.0
text = "Flip to Kill!"

[node name="ReviveButton" type="Button" parent="."]
margin_left = 768.0
margin_top = 448.0
margin_right = 896.0
margin_bottom = 512.0
text = "Flip to Revive!"

[node name="SkipButton" type="Button" parent="."]
margin_left = 768.0
margin_top = 320.0
margin_right = 896.0
margin_bottom = 384.0
text = "Skip"

[node name="PlayAgain" type="Button" parent="."]
margin_left = 448.0
margin_top = 192.0
margin_right = 576.0
margin_bottom = 256.0
text = "Play Again!"

[node name="MainMenu" type="Button" parent="."]
margin_left = 448.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 384.0
text = "Main Menu"

[node name="RollDisplay" type="Label" parent="."]
margin_left = 200.0
margin_top = 48.0
margin_right = 352.0
margin_bottom = 64.0
text = "Roll"

[node name="TurnDisplay" type="Label" parent="."]
margin_left = 376.0
margin_top = 48.0
margin_right = 416.0
margin_bottom = 62.0
text = "Turn"

[node name="FlipDisplay" type="Label" parent="."]
margin_left = 568.0
margin_top = 48.0
margin_right = 688.0
margin_bottom = 72.0
text = "Flip"

[node name="EndingDisplay" type="Label" parent="."]
margin_left = 464.0
margin_top = 576.0
margin_right = 560.0
margin_bottom = 600.0
align = 1

[connection signal="clicked" from="1-1" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-2" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-3" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-4" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-5" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-6" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-7" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-8" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-9" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-10" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-11" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-12" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-13" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-14" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-15" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-16" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-17" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-18" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-19" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-20" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-21" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-22" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-23" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-24" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-25" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-26" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-27" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="1-28" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-1" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-2" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-3" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-4" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-5" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-6" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-7" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-8" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-9" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-10" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-11" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-12" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-13" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-14" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-15" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-16" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-17" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-18" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-19" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="2-20" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-1" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-2" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-3" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-4" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-5" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-6" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-7" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-8" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-9" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-10" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-11" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="3-12" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="4-1" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="4-2" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="4-3" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="4-4" to="." method="_on_Tile_clicked"]
[connection signal="clicked" from="Blue1" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Blue2" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Blue3" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Blue4" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Red1" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Red2" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Red3" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Red4" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Yellow1" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Yellow2" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Yellow3" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Yellow4" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Green1" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Green2" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Green3" to="." method="_on_Pawn_clicked"]
[connection signal="clicked" from="Green4" to="." method="_on_Pawn_clicked"]
[connection signal="pressed" from="RollButton" to="." method="_on_RollButton_pressed"]
[connection signal="pressed" from="FlipButton" to="." method="_on_FlipButton_pressed"]
[connection signal="pressed" from="ReviveButton" to="." method="_on_ReviveButton_pressed"]
[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
